fix header on mobile

--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -6,7 +6,7 @@
     z-index: 100
     top: 0
     left: 0
-    width: 100%
+    width: 100vw
     background-color: #fff
 .header.active
   transform: translateX(300px)
